--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -5,10 +5,13 @@ html {
 }
 
 .container {
+  display: grid;
+  grid-template: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% /25% 25% 25% 25%;
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  grid-gap: 5px;
 }
 
 .container div {
@@ -22,22 +25,27 @@ html {
 
 .header {
   background-color: #006157;
+  grid-area: 1 / 1 / 2 / 5;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-area: 2 / 1 / 8 / 2;
 }
 
 .nav {
   background-color: #642cde;
+  grid-area: 2 / 2 / 3 / 5;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-area: 3 / 2 / 8 / 5;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-area: 8 / 1 / 9 / 5;
 }
 
 .article p {
