--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +21,37 @@
 
 .header {
   background-color: #393f4d;
+  display: grid;
+  grid-column: 1/3;
+  grid-template-columns: 1fr 3fr;
+}
+
+.logo{
+  text-align: left;
+}
+
+.menu ul {
+  font-size: 16px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.menu {
+  display: grid;
+  align-items: center;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type: none;
 }
 
 .sidebar {
   background-color: #C50208;
+  display: grid;
+  gap: 20px;
+  grid-row: 2/4;
 }
 
 .sidebar .photo {
@@ -48,13 +74,22 @@
   background-color: #C50208;
 }
 
+.nav ul{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style-type: none;
 }
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -74,6 +109,7 @@
   color: black;
   font-weight: normal;
   font-size: 14px;
+  height: 1fr;
 }
 
 .card .title {
@@ -83,6 +119,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/3;
 }
 
 .footer p {
